--- a/Domolend/css/style.css
+++ b/Domolend/css/style.css
@@ -4,6 +4,11 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px; }
 
+.rotate45 {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
 ul, li {
   list-style: none; }
 
@@ -55,6 +60,9 @@ ul, li {
 .video {
   margin: 0 auto;
   display: block; }
+
+.mobFilter {
+  display: none; }
 
 .width1000 {
   width: 1000px;
@@ -154,7 +162,8 @@ ul, li {
   display: inline-block; }
 
 .likeWatch {
-  margin-right: 10px; }
+  margin-right: 10px;
+  position: relative; }
   .likeWatch a {
     display: block;
     font-size: 9px;
@@ -173,16 +182,46 @@ ul, li {
     font-size: 18px !important; }
   .likeWatch i.fa-heart-o {
     padding-right: 6px; }
+  .likeWatch span {
+    border: 1px solid;
+    border-radius: 10px;
+    position: absolute;
+    top: -16px;
+    left: 2px;
+    display: block;
+    width: 12px;
+    height: 13px;
+    text-align: center;
+    line-height: 13px;
+    font-size: 12px; }
+
+.burgers {
+  display: none; }
 
 .numbers {
   margin-top: 35px;
-  font-size: 16px; }
+  font-size: 16px;
+  width: 125px; }
   .numbers span {
     display: block;
     margin-top: 5px;
     font-size: 13px;
     color: #642bb1;
-    cursor: pointer; }
+    cursor: pointer;
+    border-bottom: 1px dotted #cdcdcd;
+    position: relative; }
+    .numbers span i {
+      font-size: 16px;
+      margin-right: 5px;
+      position: relative;
+      top: 2px; }
+  .numbers span:before {
+    content: "\f095";
+    font-family: FontAwesome;
+    display: block;
+    position: absolute;
+    left: -15px;
+    vertical-align: middle; }
 
 .fa-chevron-down {
   transition: 0.5s all;
@@ -191,6 +230,7 @@ ul, li {
   -moz-transition: 0.5s all; }
 
 .numberHide {
+  display: inline-block;
   position: relative;
   margin-top: 2px;
   font-size: 13px;
@@ -211,24 +251,56 @@ ul, li {
     -o-transition: 0.4s all;
     -moz-transition: 0.4s all; }
   .numberHide ul {
+    top: 25px;
+    padding: 24px 36px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    z-index: 1000;
     display: none;
-    width: 120px;
+    width: 240px;
+    height: 170px;
+    border: 3px solid #ffcc33;
+    box-sizing: border-box;
     position: absolute;
     background: #f5f5f5;
     transition: 0.4s all;
     -webkit-transition: 0.4s all;
     -o-transition: 0.4s all;
-    -moz-transition: 0.4s all; }
+    -moz-transition: 0.4s all;
+    -webkit-transform: translateX(-25%);
+    -moz-transform: translateX(-25%);
+    -ms-transform: translateX(-25%);
+    -o-transform: translateX(-25%);
+    transform: translateX(-25%); }
+  .numberHide ul:after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    margin-left: -6px;
+    top: -15px;
+    border: 6px solid transparent;
+    border-bottom: 6px solid #FFC107; }
   .numberHide li {
-    margin: 3px;
     list-style: none;
     font-size: 14px;
     color: green;
-    width: 120px;
-    font-weight: bold; }
+    width: 100%;
+    height: 24px;
+    line-height: 24px;
+    font-weight: bold;
+    padding-left: 35px;
+    box-sizing: border-box;
+    position: relative;
+    margin: 3px 3px 20px; }
+    .numberHide li img {
+      position: absolute;
+      left: 0; }
 
 .logo img {
   margin: 16px 76px 16px 0;
+  width: 180px;
+  height: 80px;
   display: block; }
 
 .search-form {
@@ -264,6 +336,12 @@ ul, li {
   cursor: pointer; }
 
 /*╨╝╨╡╨╜╤О*/
+.corpMenuA {
+  display: block; }
+
+.menu2 {
+  display: none; }
+
 .menu {
   margin: 20px auto 20px auto;
   background: #ffcc33; }
@@ -276,22 +354,16 @@ ul, li {
     color: #642bb1;
     cursor: pointer;
     position: relative; }
+    .menu ul > li i {
+      display: none; }
     .menu ul > li img {
       display: block;
       margin: 0 auto; }
   .menu li:hover .subMenu {
     display: block;
-    transition: 0.3s all;
-    -webkit-transition: 0.3s all;
-    -o-transition: 0.3s all;
-    -moz-transition: 0.3s all;
     opacity: 1; }
 
 .subMenu {
-  transition: 0.3s all;
-  -webkit-transition: 0.3s all;
-  -o-transition: 0.3s all;
-  -moz-transition: 0.3s all;
   opacity: 0;
   display: none;
   position: absolute;
@@ -1212,6 +1284,7 @@ footer {
   background: #666666; }
 
 .lift {
+  z-index: 1001;
   font-size: 48px;
   color: #3fac00;
   position: fixed;
@@ -2990,7 +3063,7 @@ hr {
 
 .fixedMenu {
   width: 100%;
-  position: fixed;
+  /*position: fixed;*/
   z-index: 1400;
   transition: 0.15s all;
   -webkit-transition: 0.15s all;
@@ -3001,6 +3074,7 @@ hr {
   display: none; }
 
 .callbackForm {
+  border: 3px solid #ffcc33;
   transition: 0.1s top;
   -webkit-transition: 0.1s top;
   -o-transition: 0.1s top;
@@ -3008,40 +3082,90 @@ hr {
   display: none;
   box-sizing: border-box;
   padding-top: 10px;
-  background: grey;
+  background: #fff;
   z-index: 1500;
   text-align: center;
-  width: 200px;
-  height: 170px;
-  position: fixed;
-  /* -webkit-transform: translate(-50%, -50%);
-   -moz-transform: translate(-50%, -50%);
-   -ms-transform: translate(-50%, -50%);
-   -o-transform: translate(-50%, -50%);
-   transform: translate(-50%, -50%);*/ }
+  width: 280px;
+  height: 210px;
+  position: absolute; }
   .callbackForm input[type='text'], .callbackForm input[type='email'] {
-    height: 20px;
+    height: 36px;
     outline: none;
-    border-radius: 5px;
-    border: 1px solid #642bb1;
-    margin-top: 5px; }
+    border: 1px solid #ffcc33;
+    margin-top: 5px;
+    width: 250px;
+    box-sizing: border-box;
+    padding-left: 10px;
+    line-height: 34px;
+    font-family: 'Roboto', sans-serif; }
+  .callbackForm .days {
+    margin: 15px 0;
+    font-size: 14px;
+    color: #000000;
+    font-family: 'Roboto', sans-serif; }
   .callbackForm input[type='submit'] {
-    margin-top: 10px; }
+    background: #3fac00;
+    color: white;
+    display: inline-block;
+    cursor: pointer;
+    padding: 0 10px;
+    height: 40px;
+    border: none;
+    transition: 0.3s all;
+    -webkit-transition: 0.3s all;
+    -o-transition: 0.3s all;
+    -moz-transition: 0.3s all;
+    text-align: center;
+    line-height: 40px;
+    font-weight: bold; }
+  .callbackForm input[type='submit']:hover {
+    transition: 0.3s all;
+    -webkit-transition: 0.3s all;
+    -o-transition: 0.3s all;
+    -moz-transition: 0.3s all;
+    color: #000;
+    background: #ffcc33; }
   .callbackForm label {
     font-size: 14px;
     font-family: 'Roboto', sans-serif; }
   .callbackForm p {
     margin-top: 5px; }
 
+.callbackForm:after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  margin-left: -6px;
+  top: -15px;
+  border: 6px solid transparent;
+  border-bottom: 6px solid #FFC107; }
+
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .width1000 {
     width: 900px; }
+
+  .newsesMain .news {
+    max-width: 290px;
+    float: left;
+    margin-left: 15px;
+    border: 1px solid #dcdcdc;
+    box-sizing: border-box;
+    transition: 0.3s border;
+    -webkit-transition: 0.3s border;
+    -o-transition: 0.3s border;
+    -moz-transition: 0.3s border; }
+    .newsesMain .news img {
+      max-width: 275px; }
+  .newsesMain .news:first-child {
+    margin-left: 0; }
 
   .corpMenu li {
     margin-left: 5px;
     font-size: 13px; }
 
   .logo img {
+    width: 180px;
+    height: 80px;
     margin: 16px 10px 16px 0;
     display: block; }
 
@@ -3135,6 +3259,30 @@ hr {
   .width1000 {
     width: 700px; }
 
+  .callbackForm:after {
+    content: '';
+    position: absolute;
+    left: 5px;
+    margin-left: -6px;
+    top: -15px;
+    border: 6px solid transparent;
+    border-bottom: 6px solid #FFC107; }
+
+  .numberHide ul {
+    webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0); }
+  .numberHide ul:after {
+    content: '';
+    position: absolute;
+    left: 5px;
+    margin-left: -6px;
+    top: -15px;
+    border: 6px solid transparent;
+    border-bottom: 6px solid #FFC107; }
+
   .showReset {
     width: 93px; }
 
@@ -3156,7 +3304,25 @@ hr {
   .logo {
     width: 100%; }
     .logo img {
+      width: 180px;
+      height: 80px;
       margin: 16px auto;
+      display: block; }
+
+  .news {
+    max-width: 220px;
+    float: left;
+    margin-left: 20px;
+    border: 1px solid #dcdcdc;
+    box-sizing: border-box;
+    transition: 0.3s border;
+    -webkit-transition: 0.3s border;
+    -o-transition: 0.3s border;
+    -moz-transition: 0.3s border; }
+    .news img {
+      max-width: 190px;
+      max-height: 238px;
+      margin: 0 auto;
       display: block; }
 
   .search-form {
@@ -3195,26 +3361,42 @@ hr {
   .multibucket {
     margin-top: 10px; }
 
-  .menu {
-    display: none;
-    overflow-y: scroll;
-    margin: 20px auto 0 auto;
-    background: #ffcc33;
-    width: 200px !important;
-    height: 310px; }
-    .menu ul li {
-      width: 100%; }
+  /* .menu {
+     display: none;
+     overflow-y: scroll;
+     margin: 20px auto 0 auto;
+     background: #ffcc33;
+     width: 200px !important;
+     height: 310px;
+     ul {
+       li {
 
-  .subMenu {
-    position: static;
-    margin-top: 10px;
-    width: 100%; }
-    .subMenu ul {
-      float: none; }
-    .subMenu li {
-      width: 100% !important; }
-    .subMenu div {
-      display: none; }
+         width: 100%;
+       }
+     }
+   }
+   .subMenu {
+     position: static;
+     margin-top: 10px;
+     width: 100%;
+     ul {
+       float: none;
+     }
+     li {
+       width: 100% !important;
+     }
+     div {
+       display: none;
+     }
+   }*/
+  .menu ul > li:last-child:hover .subMenu {
+    left: -182px; }
+    .menu ul > li:last-child:hover .subMenu ul {
+      float: right;
+      margin-right: 5px; }
+    .menu ul > li:last-child:hover .subMenu div {
+      float: left;
+      margin-left: 20px; }
 
   .banner {
     width: 100%;
@@ -3321,8 +3503,41 @@ hr {
     margin: 0 auto;
     float: none; } }
 @media screen and (min-width: 320px) and (max-width: 425px) {
+  .mobFilter {
+    text-align: center;
+    height: 40px;
+    line-height: 45px;
+    background: #cdcdcd;
+    font-weight: bold;
+    font-family: roboto, sans-serif;
+    display: block; }
+
   .ogrClass {
     overflow-x: auto; }
+
+  .callbackForm {
+    top: 245px; }
+
+  .callbackForm:after {
+    left: 10%; }
+
+  .likeWatch {
+    margin-right: 10px;
+    position: absolute;
+    top: 20px;
+    left: 30px; }
+    .likeWatch span {
+      border: 1px solid;
+      border-radius: 10px;
+      position: absolute;
+      top: -16px;
+      left: 2px;
+      display: block;
+      width: 12px;
+      height: 13px;
+      text-align: center;
+      line-height: 13px;
+      font-size: 12px; }
 
   .goods_sliders, .goods_sliders1, .goods_sliders2 {
     width: 250px !important; }
@@ -3337,7 +3552,20 @@ hr {
     margin-bottom: 16px; }
 
   .numbers {
-    display: none; }
+    position: absolute;
+    right: 40%;
+    top: 185px; }
+    .numbers .callback {
+      display: none; }
+
+  .burgers {
+    display: block;
+    float: left;
+    margin-top: 10px;
+    line-height: 60px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: roboto; }
 
   .left_Arrow, .right_Arrow {
     width: 30px;
@@ -3349,12 +3577,6 @@ hr {
     .left_Arrow i, .right_Arrow i {
       margin: 0;
       padding: 0; }
-
-  .corpBurger {
-    display: block;
-    float: left;
-    font-size: 20px;
-    line-height: 50px; }
 
   .corpMenu {
     display: none;
@@ -3508,8 +3730,34 @@ hr {
   .logo {
     width: 100%; }
     .logo img {
+      width: 180px;
+      height: 80px;
       margin: 10px auto;
       display: block; }
+
+  .news {
+    max-width: 300px;
+    float: left;
+    margin-left: 0;
+    border: 1px solid #dcdcdc;
+    box-sizing: border-box;
+    transition: 0.3s border;
+    -webkit-transition: 0.3s border;
+    -o-transition: 0.3s border;
+    margin-bottom: 15px;
+    -moz-transition: 0.3s border; }
+    .news img {
+      max-width: 270px;
+      max-height: 238px;
+      margin: 0 auto;
+      display: block; }
+
+  .footer_top {
+    padding-top: 30px; }
+
+  .sender h6 {
+    font-size: 16px;
+    text-align: center; }
 
   .search-form {
     margin-top: 10px;
@@ -3573,14 +3821,15 @@ hr {
   .check1 a {
     margin-right: 10px; }
 
-  .burger {
+  .burger, .corpBurger {
     display: block;
     float: left;
     margin-left: 20px;
-    margin-top: 30px;
+    margin-top: 10px;
     font-size: 24px;
     color: #fc3;
-    margin-bottom: 16px; }
+    line-height: 60px;
+    margin-bottom: 5px; }
 
   .numbers {
     margin-top: 10px; }
@@ -3588,15 +3837,59 @@ hr {
   .multibucket {
     margin-top: 10px; }
 
+  .bucket:hover #orders {
+    display: none; }
+
+  .corpMenuA {
+    background: #ffcc33;
+    width: 100%;
+    display: block;
+    text-align: left;
+    font-size: 16px;
+    color: #642bb1;
+    cursor: pointer;
+    padding: 10px 0 5px 20px;
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    margin: 10px auto 5px auto; }
+    .corpMenuA li {
+      width: 100%;
+      display: inline-block;
+      text-align: left;
+      font-size: 16px;
+      cursor: pointer;
+      padding: 10px 0 5px 20px;
+      position: relative;
+      box-sizing: border-box; }
+      .corpMenuA li a {
+        color: #642bb1; }
+
   .menu {
     display: none;
     overflow-y: scroll;
-    margin: 20px auto 0 auto;
     background: #ffcc33;
-    width: 200px !important;
-    height: 310px; }
-    .menu ul li {
-      width: 100%; }
+    width: 300px !important;
+    height: auto;
+    margin: 10px auto 5px; }
+    .menu ul > li {
+      width: 100%;
+      display: inline-block;
+      text-align: left;
+      font-size: 16px;
+      color: #642bb1;
+      cursor: pointer;
+      padding: 10px 0 5px 20px;
+      position: relative;
+      box-sizing: border-box; }
+      .menu ul > li i {
+        display: inherit;
+        float: right;
+        margin-right: 30px; }
+      .menu ul > li img {
+        display: none; }
+    .menu ul > li:hover .subMenu {
+      display: none; }
 
   .subMenu {
     position: static;
@@ -3605,7 +3898,8 @@ hr {
     .subMenu div {
       display: none; }
     .subMenu ul {
-      float: none; }
+      float: none;
+      margin-left: 25px; }
     .subMenu li {
       width: 100% !important; }
 
