--- a/Domolend/css/style.scss
+++ b/Domolend/css/style.scss
@@ -4873,6 +4873,11 @@ hr {
     max-height: 320px;
   }
 
+  .creaters{
+    font-size: 11px;
+    text-align: center;
+  }
+
   .productPriceBottom div span {
     background: url(../img/hryvna.png) no-repeat 5px 0;
     padding-left: 35px;
