--- a/Domolend/css/style.scss
+++ b/Domolend/css/style.scss
@@ -1202,7 +1202,7 @@ footer {
 }
 
 .creaters {
-  text-align: right;
+  text-align: center;
   font-weight: bold;
   font-size: 12px;
   color: #888888;
@@ -4873,7 +4873,7 @@ hr {
     max-height: 320px;
   }
 
-  .creaters{
+  .creaters {
     font-size: 11px;
     text-align: center;
   }
