--- a/Domolend/css/style.css
+++ b/Domolend/css/style.css
@@ -1060,7 +1060,7 @@ footer {
   background: #3b3b3b; }
 
 .creaters {
-  text-align: right;
+  text-align: center;
   font-weight: bold;
   font-size: 12px;
   color: #888888;
