--- a/Domolend/css/style.css
+++ b/Domolend/css/style.css
@@ -3558,6 +3558,9 @@ hr {
     position: absolute;
     right: 40%;
     top: 185px; }
+    .numbers span {
+      top: -21px;
+      left: 135px; }
     .numbers .callback {
       display: none; }
 
