--- a/Domolend/css/style.scss
+++ b/Domolend/css/style.scss
@@ -4139,6 +4139,12 @@ hr {
     position: absolute;
     right: 40%;
     top: 185px;
+
+    span {
+      top: -21px;
+      left: 135px;
+    }
+
     .callback {
       display: none;
     }
