--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,13 @@ ul, li {
   display: block; }
 
 .mobFilter {
-  display: none; }
+  text-align: center;
+  height: 40px;
+  line-height: 45px;
+  background: #cdcdcd;
+  font-weight: bold;
+  font-family: roboto, sans-serif;
+  display: block; }
 
 .width1000 {
   width: 1000px;
