--- a/css/style.scss
+++ b/css/style.scss
@@ -107,7 +107,13 @@ ul, li {
 }
 
 .mobFilter {
-  display: none;
+  text-align: center;
+  height: 40px;
+  line-height: 45px;
+  background: #cdcdcd;
+  font-weight: bold;
+  font-family: roboto, sans-serif;
+  display: block;
 }
 
 .width1000 {
