--- a/LPI/css/style.scss
+++ b/LPI/css/style.scss
@@ -98,6 +98,7 @@ h4 {
 .slider {
   margin-bottom: 100px;
   position: relative;
+  height: 555px;
 }
 
 .sliderText {
@@ -1489,10 +1490,25 @@ footer, .footer {
   border-bottom: 1px solid #cdcdcd;
 }
 
+.slide {
+  position: absolute;
+  display: none;
+  left: 0;
+  top: 0;
+}
+
+.active-slide {
+  display: block;
+}
+
 @media screen and(min-width: 769px) and(max-width: 1024px) {
   .width1100 {
     width: 900px;
   }
+  .slider {
+    height: 420px;
+  }
+
   .newsCurrent {
     width: 425px;
   }
@@ -1587,6 +1603,10 @@ footer, .footer {
 @media screen and(width: 768px) {
   .width1100 {
     width: 650px;
+  }
+  .slider {
+    height: 317px;
+    margin-bottom: 60px;
   }
 
   .nav, .call1 {
@@ -1886,7 +1906,10 @@ footer, .footer {
   }
 
   .slider {
+    height: 400px;
     div {
+      height: 400px;
+      width: 100%;
       overflow: hidden;
       img {
         position: relative;
@@ -1975,10 +1998,10 @@ footer, .footer {
   .whatWeDo {
     padding: 0 20px;
     div:first-child {
-     display: none;
+      display: none;
     }
-    div{
-      width:100%;
+    div {
+      width: 100%;
       float: none;
     }
   }
